19990514-20:10 EDT David G. Holm <dholm@jsd-llc.com>
  * source/rtl/strcmp.c
    - Added SET EXACT ON rules for null strings and trailing spaces.
  * tests/working/strings3.prg
    - Added tests for null strings and trailing spaces.

19990515-01:15 CET Eddie Runia
  * source/compiler/harbour.y
    #include again

19990513-22:20 EDT David G. Holm <dholm@jsd-llc.com>
  * makefile.b31
    - Put harbour.obj back into the harbour.exe build.
  * source/compiler/harbour.y
    - Changed Expression EQ (for ==) to generate new PCODE _EXACTLYEQUAL, again.
  * source/vm/hvm.c
    - Modifed the Equal function to take one parameter: BOOL bExact, again.
    - Modified the handler for PCODE _EQUAL to call Equal( FALSE ), again.
    - Added new handler for PCODE _EXACTLYEQUAL, which calls Equal( TRUE ), again.
    - Modified the Equal function to call hb_itemStrCmp with bExact as the new
      third parameter, again.

19990514-23:45 CET Eddie Runia
  * source/rtl/set.c
    IS_STRING and IS_LOGICAL called without checking for empty pItem.

19990514-22:15 CET Eddie Runia
  * tests/working/set.ch
    added

19990514-20:30 CET Eddie Runia
  * include/set.ch (didn't work)
    added
  * source/rtl/classes.c
    Unreleased memory block in inline resolved

19990514-20:15 CET Eddie Runia
  * source/rtl/gtapi.c
    A lot of #ifdef #endif added or else it couldn't build out of the box.

19990514-19:50 CET Eddie Runia
  * source/rtl/codebloc.c
    Codeblock patch from Ryszard applied

19990514-19:45 CET Eddie Runia
  * source/rtl/arrays.c
    Patch from David (see below) was overwritten ??

19990514-17:05 CET Eddie Runia
  * harbour.y
    xVar[ xEl ] += -= *= /= %= ^= added

19990514-16:00 CET Eddie Runia
  * makefile.b32
    - added objfunc.obj
  * source/vm/hvm.c
    #ifdef NO_OBJ added
  * tests/working/hb32.bat, tests/working/bld32exe.bat
    added.


19990513-22:20 EDT David G. Holm <dholm@jsd-llc.com>
  * makefile.b31
    - Removed harbour.obj from harbour.exe build, due