@@ -1,3 +1,6 @@
+19990515-10:20 CET Eddie Runia
+  * tests/working/*.bat  make and build files added
+
 19990514-20:10 EDT David G. Holm <dholm@jsd-llc.com>
   * source/rtl/strcmp.c
     - Added SET EXACT ON rules for null strings and trailing spaces.
